Switch Channel taxonomy to use ManyToManyFields
