# openapi.yml
@@ -1043,28 +1043,40 @@ components:
         products:
           type: array
           items:
-            type: string
-            maxLength: 200
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
         product_versions:
           type: array
           items:
-            type: string
-            maxLength: 200
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
         product_streams:
           type: array
           items:
-            type: string
-            maxLength: 200
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
         product_variants:
           type: array
           items:
-            type: string
-            maxLength: 200
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
       required:
       - created_at
       - last_changed
       - link
       - name
+      - product_streams
+      - product_variants
+      - product_versions
+      - products
       - type
       - uuid
     ChannelTypeEnum:
@@ -1417,6 +1429,13 @@ components:
           items:
             $ref: '#/components/schemas/Tag'
           readOnly: true
+        channels:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
         product_versions:
           type: array
           items:
@@ -1441,6 +1460,7 @@ components:
       required:
       - build_count
       - builds
+      - channels
       - components
       - link
       - name
@@ -1483,6 +1503,13 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/Tag'
+          readOnly: true
+        channels:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: string
           readOnly: true
         cpe:
           type: string
@@ -1536,14 +1563,10 @@ components:
             additionalProperties:
               type: string
           readOnly: true
-        channels:
-          type: array
-          items:
-            type: string
-            maxLength: 200
       required:
       - build_count
       - builds
+      - channels
       - components
       - link
       - manifest
@@ -1589,6 +1612,13 @@ components:
           items:
             $ref: '#/components/schemas/Tag'
           readOnly: true
+        channels:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
         relations:
           type: array
           items:
@@ -1617,14 +1647,10 @@ components:
             additionalProperties:
               type: string
           readOnly: true
-        channels:
-          type: array
-          items:
-            type: string
-            maxLength: 200
       required:
       - build_count
       - builds
+      - channels
       - components
       - link
       - name
@@ -1669,6 +1695,13 @@ components:
           items:
             $ref: '#/components/schemas/Tag'
           readOnly: true
+        channels:
+          type: array
+          items:
+            type: object
+            additionalProperties:
+              type: string
+          readOnly: true
         products:
           type: array
           items:
@@ -1693,6 +1726,7 @@ components:
       required:
       - build_count
       - builds
+      - channels
       - components
       - link
       - name
